# yacut

./: .env.example  README.md  openapi.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.py
migrations/versions/: 5f45e0d126cd_.py
yacut/: api_views.py  constants.py  forms.py  models.py  views.py  yandex_disk.py
yacut/templates/: 404.html  base.html  create_url.html  header.html  upload_file.html
