[project]
name = "yacut"
version = "1.0.0"
description = "URL shortener service with Yandex.Disk file upload integration"
readme = "readme.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["url-shortener", "flask", "yandex-disk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "flask>=3.0.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "flask-wtf>=1.2.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.10.5",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.3",
    "pytest-asyncio>=0.23.4",
    "pytest-env>=0.6.2",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["yacut"]
